# backend-template

./: Cargo.toml  Containerfile  README.md  Rocket.toml
migrations/: 2024-04-11-23-40-57-define-table-user.surql  2024-04-11-23-47-30-define-table-login.surql  2024-04-12-14-20-36-add-user-auth-fields.surql  2024-04-12-19-47-29-define-table-registration.surql  2024-04-13-12-25-04-define-table-password-reset.surql
src/: config.rs  doc.rs  files.rs  lib.rs  mail.rs  main.rs
src/api/: login.rs  mod.rs  pow.rs  users.rs
src/api/auth/: components.rs  confirm.rs  login.rs  logout.rs  mod.rs  register.rs
src/api/auth/password/: components.rs  confirm.rs  mod.rs  reset.rs
src/api/users/: components.rs  destroy.rs  index.rs  mod.rs  show.rs  update.rs
src/database/: id.rs  login.rs  migrations.rs  mod.rs
static/http/: index.html  not_found.html
static/http/assets/: proof-of-work.html
static/mail/confirm-account/: content.html  content.txt  subject.txt
static/mail/reset-password/: content.html  content.txt
static/mail/verify-account/: content.html  content.txt  subject.txt
tests/: auth.rs  static_files.rs  users.rs
tests/common/: mod.rs
