[package]
name = "backend-template"
version = "0.1.0"
edition = "2021"

[dependencies.rocket]
version = "0.5"
features = ["json"]

[dependencies.surrealdb]
version = "1.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.lettre]
version = "0.11"
default_features = false
features = ["smtp-transport", "pool", "builder", "tokio1", "tokio1-native-tls"]

[dependencies.html-escape]
version = "0.2"

[dependencies.tokio]
version = "1"
features = ["fs"]

[dependencies.utoipa]
version = "4.2"
features = ["rocket_extras"]

[dependencies.utoipa-rapidoc]
version = "3.0"
features = ["rocket"]

[dependencies.serde_json]
version = "1.0"

[dependencies.thiserror]
version = "1.0"
