[package]
name = "backend-template"
version = "0.1.0"
edition = "2021"

[dependencies.rocket]
version = "0.5"
features = ["json"]

[dependencies.surrealdb]
version = "1.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.include_dir]
version = "0.7"

[dependencies.sha2]
version = "0.10"

[dependencies.lettre]
version = "0.11"
default_features = false
features = ["smtp-transport", "pool", "builder", "tokio1", "tokio1-native-tls"]

[dependencies.html-escape]
version = "0.2"

[dependencies.tokio]
version = "1"
features = ["fs"]

[dependencies.utoipa]
version = "4.2"
features = ["rocket_extras"]

[dependencies.utoipa-rapidoc]
version = "3.0"
features = ["rocket"]

[dependencies.serde_json]
version = "1.0"

[dependencies.thiserror]
version = "1.0"
